# q_ffi

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  q_ffi_config.h.in
dependencies/q/: k.hpp
libcurl/: libcurl.q  test_libcurl.q
libffi/: case2.c
libffi/i686-pc-cygwin/: Makefile  config.status  fficonfig.h  libffi.map  libtool
libffi/i686-pc-cygwin/doc/: Makefile
libffi/i686-pc-cygwin/include/: Makefile
libffi/i686-pc-cygwin/man/: Makefile
libffi/i686-pc-cygwin/src/.deps/: closures.Plo  java_raw_api.Plo  prep_cif.Plo  raw_api.Plo  types.Plo
libffi/i686-pc-cygwin/src/x86/.deps/: ffi.Plo  sysv.Plo
libffi/i686-pc-cygwin/testsuite/: Makefile
libffi/with_static/dll_test/: a.exe.stackdump  main.cpp
libffi/x64/: main.cpp
libffi/x64/include/: Makefile
libffi/x64/src/: a.exe.stackdump
libffi/x86/with_dll/: case3.c
libffi/x86/with_static/case3/: case3.cpp
libffi/x86/with_static/include/: Makefile
libffi_followup/x64/: CMakeLists.txt  a.exe.stackdump  case3.c
libffi_followup/x64/include/: fficonfig.h
libffi_followup/x64/lib/: invalid_lib_desc_test1.2.txt
libffi_followup/x86/: a.exe.stackdump  case1.c
libffi_followup/x86/include/: ffi.h
q_ffi/: CMakeLists.txt  ffi.cpp  ffi.h  k4.h  k4_types.hpp  kerror.hpp  kpointer.hpp  ktype_traits.hpp  ktypes.cpp  ktypes.hpp  misc.cpp  misc.hpp  pointer.hpp  q_ffi.cmake  q_ffi.q  q_ffi_config.h.in  std_ext.hpp  types.cpp  types.hpp  version.cpp
q_ffi-master/: CMakeSettings.json
q_ffi-master/q_ffi/: CMakeLists.txt  q_ffi.q
q_ffi-master/q_ffi-master/: .editorconfig
q_ffi-master/q_ffi-master/q_ffi/inc/: version.hpp
q_ffi-master/q_ffi-master/test/src/: setup.cpp
q_ffi-master/q_ffi/inc/: ktype_traits.hpp  std_ext.hpp
q_ffi-master/q_ffi/src/: kerror.cpp  version.cpp
q_ffi-master/test/src/: test_temporals.cpp
q_ffi/inc/: dlloader.hpp  ffargs.hpp  ffcall.hpp  ffi.h  ffi_api.h  kerror.hpp  kpointer.hpp  ktype_traits.hpp  ktype_traits_io.hpp  ktypes.hpp  q_ffi.h  std_ext.hpp  type_convert.hpp  version.hpp
q_ffi/src/: dllmain.cpp  dlloader.cpp  ffargs.cpp  ffcall.cpp  ffi.cpp  ffi_api.cpp  kerror.cpp  ktype_traits.cpp  ktypes.cpp  type_convert.cpp  version.cpp
test/: CMakeLists.txt  GoogleTest.cmake  GoogleTest_CMakeLists.txt.in  setup.cpp  setup.hpp  test.lib.q  test_ffcall.cmake  test_ffcall.cpp  test_ffcall.q  test_ffcall_add.q.in  test_ffcall_args.q.in  test_kpointer.cpp  test_ktypes.cpp  test_libffi.cpp  test_libffi_linux.hpp  test_libffi_win.hpp  test_pointer.cpp  test_std_ext.cpp  test_temporals.cpp  test_type_convert.cpp  test_types.cpp  tests.cmake
test/dll/: test_dll.cpp  test_dll.h.in  test_dll_linux.hpp  test_dll_win.hpp
test/inc/: setup.hpp
test/q/: test.lib.q  test_ffcall_add.q  test_ffcall_adds.q  test_ffcall_args.q  test_ffcall_neg.q  test_ffcall_vars.q  tests.cmake
test/src/: setup.cpp  test_kpointer.cpp  test_ktypes.cpp  test_libffi.cpp  test_libffi_dll.cpp  test_std_ext.cpp  test_temporals.cpp  test_type_convert.cpp
